--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		
 	</div>
-	<script src="jquery-1.7.2.min.js"></script>
+	<script src="http://lib.sinaapp.com/js/jquery/1.8/jquery.min.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
